--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".ImageActivity" />
         <activity android:name=".MyMapFragment" />
         <activity android:name=".MyBluetoothActivity" />
+        <activity android:name=".Checked" />
 
         <uses-library
             android:name="org.apache.http.legacy"
