--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".MyMapFragment" />
         <activity android:name=".MyBluetoothActivity" />
         <activity android:name=".Checked" />
+        <activity android:name=".InfoUserActivity"/>
 
         <uses-library
             android:name="org.apache.http.legacy"
